@@ -54,7 +54,11 @@ endif
 
 # Set actual architecture
 # The current architecture can be obtained by: gcc -Q --help=target
-ifeq ($(patsubst armv6%,armv6,$(BUILD_ARCH)),armv6)
+ifeq ($(BUILD_ARCH),armel)
+  override ARCHITECTURE   = $(BUILD_ARCH)
+  ARCHITECTURE_FAMILY     = generic
+  ARCHITECTURE_CFLAGS    :=
+else ifeq ($(patsubst armv6%,armv6,$(BUILD_ARCH)),armv6)
   override ARCHITECTURE   = arm32
   ARCHITECTURE_FAMILY     = arm32
   ARCHITECTURE_CFLAGS    := -march=armv6 -marm
